Latest Code Commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="zxx">
 
 <head>
@@ -170,7 +170,7 @@
           </div>
           <div class="">
             <h4>Power BI</h4>
-            <a href="power_bi.html" target="_blank">Learn More </a>
+            <a href="power_bi.html">Learn More </a>
           </div>
         </div>
       </div>
