--- a/careers.html
+++ b/careers.html
@@ -120,7 +120,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Snowflake Developer</a></h5>
+                                                        <h5 class="f-18"><a href="snowflake_careers.html" class="text-dark">Snowflake Developer</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -167,7 +167,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Power BI Developer</a></h5>
+                                                    <h5 class="f-18"><a href="power-bi_careers.html" class="text-dark">Power BI Developer</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -214,7 +214,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Dell Boomi Developer</a></h5>
+                                                        <h5 class="f-18"><a href="dell-boomi_careers.html" class="text-dark">Dell Boomi Developer</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -261,7 +261,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Looker BI Developer</a></h5>
+                                                        <h5 class="f-18"><a href="looker-bi_careers.html" class="text-dark">Looker BI Developer</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -308,7 +308,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Data Scientist</a></h5>
+                                                        <h5 class="f-18"><a href="data-scientist_careers.html" class="text-dark">Data Scientist</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -355,7 +355,7 @@
                                                 </div>
                                                 <div class="col-md-3">
                                                     <div>
-                                                        <h5 class="f-18"><a href="job-description.html" class="text-dark">Databricks Engineer</a></h5>
+                                                        <h5 class="f-18"><a href="data-bricks_careers.html" class="text-dark">Databricks Engineer</a></h5>
                                                         <p class="text-muted mb-0">GWC Technologies pvt.Ltd</p>
                                                     </div>
                                                 </div>
@@ -398,7 +398,7 @@
                           </section>
 
                        <!-- newsletter -->
-<section class="newsletter">
+<section class="newsletter" style="margin-top:130px">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
