--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Leadership</h2>
+        <h2 class="section-title">Our Leadership Team</h2>
       </div>
       <div class="col-md-4 col-sm-6 mb-50">
         <a><img src="images/ceo.jpg" alt="leaders" class="rounded w-100 img-fluid myBtn_multi"></a>
